Add discord auth endpoints, allow settings/premium status read w/ discord token
